# finforesight

./: .gitignore  .mcp.json  CLAUDE.md  MANUAL_TEST_SUITE.md  PROGRESS.md  README.md  TEST_SUITE.md  TODO.md  claude.md  financial_planner_requirements.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROGRESS.md  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 1044f7a8ec9c_update_user_model_align_fields_with_.py  15e6716ad693_merge_reconciliation_and_confirmation_.py  1c408dc66b89_initial_schema.py  3e79c4a05b1d_create_financial_institutions_table_and_.py  3f4c9d9a9442_allow_negative_amounts_for_expenses_and_.py  988999a9ba36_add_account_reconciliations_table.py  9b289416089d_add_scheduledtransaction_and_.py  a1b2c3d4e5f6_add_account_and_status_to_exceptions.py  cf0154ea9556_add_planning_value_to_accounttype_enum.py  e1597a1e7b29_add_refreshtoken_model_for_jwt_.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: accounts.py  auth.py  categories.py  dashboard.py  financial_institutions.py  forecast.py  reconciliation.py  scheduled_transactions.py  test.py
backend/app/core/: ERROR_HANDLING.md  __init__.py  config.py  database.py  errors.py  exceptions.py  logging.py  security.py  seed_categories.py
backend/app/models/: __init__.py  account.py  base.py  category.py  financial_institution.py  reconciliation.py  refresh_token.py  scheduled_transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  auth.py  category.py  dashboard.py  error.py  financial_institution.py  forecast.py  reconciliation.py  scheduled_transaction.py  user.py
backend/app/services/: dashboard_service.py  forecast_service.py  reconciliation_service.py  recurrence_service.py
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_categories.py  test_dashboard.py  test_forecast.py  test_reconciliation.py  test_scheduled_transactions.py
frontend/: IMPLEMENTATION_PROGRESS.md  README.md  angular.json  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/core/: currency.ts
frontend/src/app/core/constants/: currencies.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts  error.interceptor.ts
frontend/src/app/core/models/: account.model.ts  analysis.model.ts  category.model.ts  dashboard.model.ts  financial-institution.model.ts  reconciliation.model.ts  transaction.model.ts  user.model.ts
frontend/src/app/core/services/: api.service.ts  auth.service.ts  category.service.ts  currency.service.ts  dashboard.service.ts  financial-institution.service.ts  storage.service.ts
frontend/src/app/features/accounts/: accounts.component.ts
frontend/src/app/features/analysis/: analysis.component.ts  analysis.routes.ts
frontend/src/app/features/auth/: auth.routes.ts
frontend/src/app/features/categories/: categories.component.ts
mockups/: accounts-mockup.html  analysis-mockup.html  calendar-view-mockup.html  dashboard-mockup.html  edit-recurring-modal-mockup.html  mobile-dashboard-mockup.html  reconciliation-mockup.html  scheduler-mockup.html  transaction-form-mockup.html
ux/: ux calendar scheduler.md  ux reconciliation.md  ux screens.md
(+49 files in other folders)
